<resources>

    <string name="app_name">Perantara</string>

    <string-array name="jk_array">
        <item>Laki-Laki</item>
        <item>Perempuan</item>
    </string-array>

    <string-array name="pendidikan_array">
        <item>SD</item>
        <item>SMP</item>
        <item>SMA</item>
        <item>Perguruan Tinggi</item>
    </string-array>

    <string-array name="pekerjaan_array">
        <item>PNS</item>
        <item>TNI</item>
        <item>Polri</item>
        <item>Pegawai Swasta</item>
        <item>Wiraswasta</item>
        <item>Mahasiswa</item>
        <item>Pelajar</item>
        <item>Lainnya</item>
    </string-array>

    <string name="subtitle">Aplikasi Edukasi Kanker Payudara untuk\nMasyarakat Jawa Barat</string>
    <string name="hint_umur">Berapakah Umur anda?</string>
    <string name="hint_email">Apakah Email Anda? *Opsional</string>
    <string name="hint_jk">Jenis Kelamin Anda?</string>
    <string name="hint_pendidikan">Tingkat Pendidikan Anda?</string>
    <string name="hint_pekerjaan">Apakah Pekerjaan Anda?</string>
    <string name="pengenalan_eti">\tApa kabar semua, Perkenalkan saya Eti. Selamat datang di aplikasi Perantara, dengan aplikasi ini kalian bakal dapat banyak informasi tentang kesehatan payudara. Jadi simak baik-baik yah</string>
    <string name="pengenalan_drajat">dr. Drajat R Suardi, Sp.B (K) Onk., FICS</string>
    <string name="pengenalan_drajat2">\tDokter Drajat merupakan dokter spesialis bedah onkologi Rumah Sakit Hasan Sadikin (RSHS) Bandung. Beliau juga pernah menjabat sebagai PP Perhimpunan Onkologi Indonesia Periode 2010 s.d 2014</string>
    <string name="pengenalan_ahyani">dr. Ahyani Raksanagara, M.Kes</string>
    <string name="pengenalan_ahyani2">\tSaat ini Dokter Ahyani merupakan Kepala Dinas Kesehatan Kota Bandung. Dokter yang pernah terdiagnosis kanker payudara namun telah berhasil menjalani seluruh prodesur pengobatan sehingga mampu kembali beraktivitas secara normal</string>
    <string name="umur_error">Umur harus diisi!</string>
    <string name="bagian_1_selesai">Bagian 1\nPengenalan Tokoh\nSelesai</string>
    <string name="bandung_cancer_society">Bandung Cancer Society</string>
    <string name="BCS_facebook">https://www.facebook.com/BCSBandungCancerSociety</string>
    <string name="BCS_contact">Yanti Setiawan (081222120971)</string>
    <string name="yayasan_kesehatan_payudara_jawa_barat_ykp">Yayasan Kesehatan Payudara Jawa Barat (YKP)</string>
    <string name="YKP_alamat">Jl. Hegarmanah 3 bandung 40141</string>
    <string name="YKP_telepon">Telepon : (022) 2034313</string>
    <string name="YKP_hotline">Hotline : 081316315279</string>
    <string name="yayasan_kanker_indonesia_yki">Yayasan Kanker Indonesia (YKI)</string>
    <string name="YKI_alamat">Jl. Kejaksaan No, 43, Bandung 40112</string>
    <string name="YKI_telepon">Telepon : (022) 4230240</string>
    <string name="YKI_email">Email : ykijabar@bdg.centrin.net.id</string>
    <string name="daftar_isi_header">~ Daftar Isi ~</string>
    <string name="chapter1_title">1. Pengenalan Tokoh</string>
    <string name="chapter2_title">2. Ada apa dengan payudara saya?</string>
    <string name="chapter3_title">3. Mengapa Perlu Konsultasi Ke Dokter?</string>
    <string name="chapter4_title">4. Ibu Tidak Sendirian</string>
    <string name="kelompok_yang_peduli">Kelompok yang peduli</string>
    <string name="kirim_button_text">Kirim</string>
    <string name="desc_eti">Eti</string>
    <string name="desc_dr_drajat">Dr. Drajat</string>
    <string name="desc_dr_ahyani">Dr. Ahyani</string>
    <string name="desc_finish_chapter_button">Finish Chapter Button</string>

    <string name="chapter_two_bubble_1">Dokter Ahyani, beberapa teman saya yang merasakan ada benjolan di payudaranya, mereka cemas dan bertanya, \"ada apa dengan payudara saya? apakah benjolan ini bisa diobati?\". Bagaimana pengalaman dokter Ahyani dalam mengatasi kecemasan seperti ini?</string>
    <string name="chapter_two_bubble_2">Begitu menyadari ada yang mencurigakan, saya segera periksa dan konsultasi ke dokter untuk memastikan apa masalahnya. Jadi, keputusan ibu untuk periksa ke dokter sudah tepat dan kebanyakan benjolan yang terjadi pada payudara bukan kanker dan berhasil di tangani dengan baik.</string>
    <string name="bagian_2_selesai">Bagian 2\nAda Apa Dengan Payudara Saya?\nSelesai</string>

    <string name="sadari">SADARI</string>
    <string name="dengan">dengan</string>
    <string name="salira">SALIRA</string>
    <string name="periksa_n_npayudara_n_nsendiri_t">PerikSA  payuDAra  sendiRI</string>
    <string name="rasa_n_nlihat_n_nraba">raSA  LIhat  RAba</string>
    <string name="bagian_3_nmengapa_perlu_konsultasi_ke_dokter_nselesai">Bagian 3\nMengapa Perlu Konsultasi Ke Dokter?\nSelesai</string>

    <string name="dukungan_tidak_hanya_dari_suami_dan_keluarga_bisa_juga_dari_sahabat_atau_orang_yang_peduli_pada_ibu">Dukungan tidak hanya dari suami atau keluarga, bisa juga dari sahabat atau orang yang peduli dengan Ibu.</string>
    <string name="selain_suami_anak_anak_atau_keluarga_besar_kira_kira_siapa_lagi_yang_bisa_membantu_ibu_nibu_bisa_menghubungi_mereka_dan_sampaikan_harapan_ibu">Selain suami, anak-anak, atau keluarga besar, kira-kira siapa lagi yang bisa membantu Ibu?</string>
    <string name="penting_untuk_diingat">Penting untuk diingat!</string>
    <string name="bagian_4_nibu_tidak_sendirian_nselesai">Bagian 4\nIbu Tidak Sendirian\nSelesai</string>
    <string name="next_arrow">Next Arrow</string>
    <string name="prev_arrow">Prev arrow</string>
    <string name="bagikan_aplikasi_ini">Bagikan Aplikasi ini</string>

    <string name="hal4_1">Pertama-tama, coba ibu berdiri di depan cermin dengan kedua lengan ke bawah.</string>
    <string name="hal4_2">Kemudian, coba ubah posisi tangan Ibu menjadi bertolak pinggang</string>
    <string name="hal4_3">Lalu sekali lagi ubah posisi tangan ibu manjadi diangkat keatas. Perhatikan perubahan payudara.</string>
    <string name="achievement_congrats">Selamat... Anda sudah selesai membaca informasi dalam aplikasi Perantara ini. Terima kasih sudah menggunakan aplikasi ini dan mari kita sebarkan kepada saudara, teman, kenalan dan masyarakat luas agar semua orang lebih faham mengenai penyakit Kanker Payudara.</string>

</resources>
