<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ContactActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        android:minHeight="100dp"
        app:cardCornerRadius="20dp"
        app:contentPadding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/organization1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/minou"
                android:maxLines="1"
                android:text="@string/bandung_cancer_society"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/website1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/organization1"
                android:fontFamily="@font/minou"
                android:maxLines="1"
                android:text="@string/BCS_facebook" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/website1"
                android:fontFamily="@font/minou"
                android:text="@string/BCS_contact" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        android:minHeight="100dp"
        app:cardCornerRadius="20dp"
        app:contentPadding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/organization2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/minou"
                android:maxLines="1"
                android:text="@string/yayasan_kesehatan_payudara_jawa_barat_ykp"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/alamat1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/organization2"
                android:fontFamily="@font/minou"
                android:maxLines="1"
                android:text="@string/YKP_alamat" />

            <TextView
                android:id="@+id/telepon1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/alamat1"
                android:fontFamily="@font/minou"
                android:text="@string/YKP_telepon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/telepon1"
                android:fontFamily="@font/minou"
                android:text="@string/YKP_hotline" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        android:minHeight="100dp"
        app:cardCornerRadius="20dp"
        app:contentPadding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/organization3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/minou"
                android:maxLines="1"
                android:text="@string/yayasan_kanker_indonesia_yki"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/alamat2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/organization3"
                android:fontFamily="@font/minou"
                android:maxLines="1"
                android:text="@string/YKI_alamat" />

            <TextView
                android:id="@+id/telepon2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/alamat2"
                android:fontFamily="@font/minou"
                android:text="@string/YKI_telepon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/telepon2"
                android:fontFamily="@font/minou"
                android:text="@string/YKI_email" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>