<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="16dp"
    tools:context=".chapter1.ChapterOne2Fragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="24dp">

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/cardtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ventura_edding"
                android:text="@string/pengenalan_drajat"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/cardtext2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/minou"
                android:text="@string/pengenalan_drajat2"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="match_parent"
                android:padding="16dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/desc_dr_drajat"
                android:src="@drawable/perkenalan_drajat" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>